# teem

./: CMakeLists.txt  CTestConfig.cmake  DartConfig.cmake  LICENSE.txt  README.txt  TestBuild.cmake
CMake/: CheckBigBitfield.c  CheckBigBitfield.cmake  FindBZ2.cmake  FindFFTW3.cmake  FindLEVMAR.cmake  TEEMConfig.cmake.in  TeemConfig.cmake.in  TeemUse.cmake  TestNO_ICC_IDYNAMIC_NEEDED.cmake  TestNO_ICC_IDYNAMIC_NEEDED.cxx  TestQnanhibit.c  TestQnanhibit.cmake  airExistsConf.h  testAirExists.cxx
Examples/sanity/: CMakeLists.txt  sanity.c
Testing/: CMakeLists.txt  testDataPath.h.in  test_data_paths.h.in
Testing/air/: CMakeLists.txt  TODO.txt  amath.c  miscAir.c  mtrand.c  pptest.c  string.c  strtok.c
Testing/biff/: CMakeLists.txt  test.c
Testing/gage/: CMakeLists.txt  TODO.txt  probeMulti.c  probePolynomial.c  probeScl.c  tsbp.c
Testing/meet/: CMakeLists.txt  buildinfo.c  enmall.c  kernall.c  probeSS.c
Testing/nrrd/: CMakeLists.txt  macros.c  sanity.c  tbspec.c  tload.c  trand.c  tskip.c
Testing/ten/: CMakeLists.txt  glyphBqd.c  tendlist.c
Testing/unrrdu/: CMakeLists.txt  unulist.c
UseTeemCMakeDemo/: sanity.c
data/test/: trandhisto.nrrd  trandhisto.pgm  trandvals.nrrd
include/: teem32bit.h  teemBigbitfield.h  teemDio.h  teemEndian.h  teemPng.h  teemQnanhibit.h
python/ctypes/: Nrrd.py  gen-teem.py  go-gen-teem.sh  go-teem-gen.sh  interface_test.py  mobius.py  pullDemo.py  sourceme-ctypeslib.txt  teem-gen.py  teem.py
src/: CHANGES.txt  CMakeLists.txt  CODING.txt  GNUmakefile  HELP.txt  LICENSE.txt  README.txt  TODO.txt  names.pl  preamble.c  preamble.mk  release-nm-check.csh  release.txt  unangle.pl
src/air/: 754.c  CHANGES.txt  CMakeLists.txt  GNUmakefile  TODO.txt  air.h  airThread.c  airThread.h  array.c  dio.c  endianAir.c  enum.c  heap.c  math.c  miscAir.c  mop.c  parseAir.c  privateAir.h  rand48.c  randMT.c  sane.c  sources.cmake  string.c  threadAir.c
src/alan/: CMakeLists.txt  GNUmakefile  alan.h  coreAlan.c  enumsAlan.c  methodsAlan.c  sources.cmake
src/bane/: CMakeLists.txt  GNUmakefile  Makefile  TODO.txt  arrays.c  bane.h  clip.c  defaults.c  defaultsBane.c  gkmsFlotsam.c  gkmsHvol.c  gkmsInfo.c  gkmsMite.c  gkmsOpac.c  gkmsPvg.c  gkmsScat.c  gkmsTxf.c  hvol.c  inc.c  measr.c  methods.c  methodsBane.c  private.h  privateBane.h  probe.c  range.c  rangeBane.c  scat.c  sources.cmake  trex.c  trnsf.c  valid.c
src/bane/test/: apply.c  gkms.c  htrnsf.c  opac.c  pos.c  pvg.c  sigma.c  tblah.c  tinfo.c  tprobe.c
src/biff/: CMakeLists.txt  GNUmakefile  Makefile  TODO.txt  biff.c  biff.h  biffbiff.c  biffmsg.c  privateBiff.h  sources.cmake
src/coil/: CMakeLists.txt  GNUmakefile  coil.h  coreCoil.c  defaultsCoil.c  enumsCoil.c  methodsCoil.c  realmethods.c  scalarCoil.c  sources.cmake  tensorCoil.c
src/dye/: CMakeLists.txt  GNUmakefile  Makefile  TODO.txt  convert.c  convertDye.c  dye.h  methods.c  methodsDye.c  sources.cmake
src/echo/: CMakeLists.txt  GNUmakefile  Makefile  TODO.txt  bounds.c  color.c  echo.h  enum.c  enumsEcho.c  intx.c  light.c  lightEcho.c  list.c  matter.c  methods.c  methodsEcho.c  model.c  object.c  objmethods.c  private.h  privateEcho.h  ray.c  render.c  renderEcho.c  set.c  sources.cmake  sqd.c
src/echo/test/: glyph.c  test.c  trend.c
src/elf/: ESHEstimElf.c  GNUmakefile  ballStickElf.c  elf.h  glyphElf.c  maximaElf.c  sources.cmake
src/ell/: CMakeLists.txt  GNUmakefile  Makefile  TODO.txt  cubic.c  cubicEll.c  eigen.c  ell.h  ellMacros.h  genmat.c  mat.c  misc.c  miscEll.c  quat.c  sources.cmake  vec.c  vecEll.c
src/gage/: CHANGES.txt  CMakeLists.txt  GNUmakefile  INFO.txt  Makefile  TODO.txt  arrays.c  ctx.c  deconvolve.c  defaults.c  defaultsGage.c  enums.c  filter.c  gage.h  general.c  kind.c  kinds.c  methods.c  methodsGage.c  misc.c  miscGage.c  multiGage.c  optimsig.c  print.c  private.h  privateGage.h  pvl.c  scl.c  scl3pfilterbody.c  sclanswer.c  sclfilter.c  sclmethods.c  sclprint.c  shape.c  simple.c  sources.cmake  st.c  stack.c  stackBlur.c  update.c  (+3 more)
src/gage/test/: aalias.c  ctfix.c  demo.c  gantry.c  genoptsig.c  indx.c  maxes.c  probe.c  qbert.c  sprobe.c  ssc.c  tplot.c  tprobe.c  vh.c
src/hest/: CHANGES.txt  CMakeLists.txt  GNUmakefile  Makefile  TODO.txt  defaults.c  defaultsHest.c  hest.h  methods.c  methodsHest.c  parse.c  parseHest.c  private.h  privateHest.h  sources.cmake  usage.c
src/hest/test/: bday.c  ex0.c  ex1.c  ex2.c  ex3.c  ex4.c  ex5.c  strings.c  tmpl.c
src/hex/: CMakeLists.txt  README.txt  (+2 more)
src/limn/: CMakeLists.txt  GNUmakefile  Makefile  TODO.txt  cam.c  contour.c  defaults.c  defaultsLimn.c  enumsLimn.c  env.c  envmap.c  hest.c  hestLimn.c  io.c  light.c  limn.h  lpuFlotsam.c  lpu_about.c  lpu_ccfind.c  lpu_meas.c  lpu_psel.c  lpu_rast.c  lpu_sort.c  lpu_verts.c  matx.c  methods.c  methodsLimn.c  obj.c  polydata.c  polyfilter.c  polymod.c  polyshapes.c  polywind.c  privateLimn.h  qn.c  render.c  renderLimn.c  shapes.c  sources.cmake  splineEval.c  (+5 more)
src/limn/test/: clip.c  des.c  didthis.soid.txt  intx.c  light.c  lpu.c  map.c  off2eps.c  plot.c  soid.c  tbc.c  tcam.c  tcamanim.c  test.c  tio.c  tiso.c  tps.c  tqn.c  triimg.c  tspline.c
src/nrrd/: CHANGES.txt  CMakeLists.txt  GNUmakefile  Makefile  TODO.txt  accessors.c  apply.c  apply1D.c  apply2D.c  arith.c  arrays.c  arraysNrrd.c  axes.c  axis.c  bsplKernel.c  cc.c  ccmethods.c  changes.txt  comment.c  convert.c  convertNrrd.c  defaults.c  defaultsNrrd.c  deringNrrd.c  encoding.c  encodingAscii.c  encodingBzip2.c  encodingGzip.c  encodingHex.c  encodingRaw.c  encodingZRL.c  endian.c  endianNrrd.c  enums.c  enumsNrrd.c  fftNrrd.c  filt.c  format.c  formatEPS.c  formatNRRD.c  (+42 more)
src/nrrd/test/: ax.c  convo.c  coord.c  dnorm.c  eio.c  enum2str.c  genvol.c  histrad.c  io.c  iotest.c  ktest.c  kv.c  macrotest.c  methodstest.c  minmax.c  morph.c  nantest.c  otsu.c  quadvol.c  reuse.c  rsmp.c  shuff.c  simple.c  str2enum.c  strio.c  subtest.c  subtest2.c  texp.c  tio.c  tkernel.c  tline.c  trand.c  tread.c  typestest.c
src/nrrd/tmf/: README.txt  fix1.pl  fix2.pl  fix3.pl  gk.tgz  tmFilters_raw.c
win32/: README.txt
(+447 files in other folders)
